# SCARCE-CXR

./: .gitignore  barlow_ep191_finetune_state.json  main.py  moco_ep774_finetune_state.json  pyproject.toml
configs/: barlow.yaml  dino.yaml  moco.yaml
data/: __init__.py  dataset.py  download.py  knn_eval.py  load_backbone.py  resize_datasets.py  show_augmented.py
data/eval/: collapse_monitor.py
data/viz/: domain_gap.py  gradcam.py  gradcam_comparison.py  layer_viz.py  padchest_stats.py  plot_lr_schedules.py  plot_std.py  replot.py  show_augmented.py  show_padchest_diseases.py  show_samples.py  spark_recon_gradcam.py  spark_reconstructions.py
finetune/: _data.py  _plots.py  count_labels.py  finetune.py  probe.py
results/: finetune_padchest_2026-03-24.md  probe_padchest_2026-03-24.md
ssl_methods/barlow/: data.py  loss.py  model.py  train.py
ssl_methods/dino/: data.py  loss.py  train.py
ssl_methods/moco/: __init__.py  data.py  model.py  train.py
ssl_methods/spark/: __init__.py  data.py  model.py
